--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ CNNforpaper/ResNet/cifar-10-python/
 CNNforpaper/ResNet/traindata.tfrecords
 CNNforpaper/ResNet/testdata.tfrecords
 .idea/workspace.xml
+.idea/
