--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ CNNforpaper/ResNet/testdata.tfrecords
 .idea/workspace.xml
 .idea/
 .idea
+
+CNNforpaper/ZF-net/cifar-10-python/
+CNNforpaper/ZF-net/traindata.tfrecords
+CNNforpaper/ZF-net/testdata.tfrecords
